fixed table headers contrast

--- a/beta/static/style.css
+++ b/beta/static/style.css
@@ -61,6 +61,10 @@ table {
     color: var(--color-table-text);
   }
 
+.tableheads {
+    color: darkslategray;
+}
+
   tr:hover {background-color: #f4f0ff;}
 
 th, td {
